--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
 		<version>2.7.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+        
+       
+        
 	<groupId>com.portfolio</groupId>
 	<artifactId>SpringBoot</artifactId>
 	<version>1.0</version>
@@ -19,6 +22,11 @@
 	 <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
+             <dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-ui</artifactId>
+    <version>1.6.4</version>
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
