--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
+// server.port=8088
+// spring.jpa.hibernate.ddl-auto=update
+// spring.datasource.url = jdbc:mysql://localhost:3306/t2?useSSL=false&serverTimeZone=UTC
+// spring.datasource.username=fede
+// spring.datasource.password=fedeFEDE***123
+// spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
 server.port=8088
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:mysql://localhost:3306/t2?useSSL=false&serverTimeZone=UTC
-spring.datasource.username=fede
-spring.datasource.password=fedeFEDE***123
+spring.datasource.url = jdbc:mysql://aws-sa-east-1.connect.psdb.cloud/portfolioap?sslMode=VERIFY_IDENTITY
+spring.datasource.username=9rq2c7hy6f784gbgol2w
+spring.datasource.password=pscale_pw_LA4dBCthh9UbJNhjA2glku0OczGoQHedfuZqLkqENZ4
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
