--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ server.port=8088
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url = jdbc:mysql://aws-sa-east-1.connect.psdb.cloud/portfolioap?sslMode=VERIFY_IDENTITY
 spring.datasource.username=9rq2c7hy6f784gbgol2w
-spring.datasource.password=pscale_pw_LA4dBCthh9UbJNhjA2glku0OczGoQHedfuZqLkqENZ4
+spring.datasource.password=TESTPASSWORD
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
