--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url = jdbc:mysql://aws-sa-east-1.connect.psdb.cloud/portfolioap?sslMode=VERIFY_IDENTITY
-spring.datasource.username=vyj1kpoqqvig97xpoxj4
+spring.datasource.username=TESTUSER
 spring.datasource.password=TESTPASSWORD
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
