--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@
 // spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
-server.port=8080
+server.port=8088
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url = jdbc:mysql://aws-sa-east-1.connect.psdb.cloud/portfolioap?sslMode=VERIFY_IDENTITY
-spring.datasource.username=TESTUSER
-spring.datasource.password=TESTPASSWORD
+spring.datasource.username=or90zsj3ki3gufnfmvrz
+spring.datasource.password=pscale_pw_HXtFQJ1hfdsTHD1ACIrd84wstKKV7zb1ciShYg4pjio
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
