--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+// localhost
 // server.port=8088
 // spring.jpa.hibernate.ddl-auto=update
 // spring.datasource.url = jdbc:mysql://localhost:3306/t2?useSSL=false&serverTimeZone=UTC
@@ -5,19 +6,20 @@
 // spring.datasource.password=fedeFEDE***123
 // spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+// koyeb
+server.port=${PORT:8080}
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:mysql://aws-sa-east-1.connect.psdb.cloud/portfolioap?sslMode=VERIFY_IDENTITY
+spring.datasource.username=or90zsj3ki3gufnfmvrz
+spring.datasource.password=pscale_pw_HXtFQJ1hfdsTHD1ACIrd84wstKKV7zb1ciShYg4pjio
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+//fly.io
+//ojo para hacer el deploy usar puerto 8080 sino da error, en dev mode usar 8088
 //server.port=${PORT:8080}
 //spring.jpa.hibernate.ddl-auto=update
-//spring.datasource.url = jdbc:mysql://aws-sa-east-1.connect.psdb.cloud/portfolioap?sslMode=VERIFY_IDENTITY
-//spring.datasource.username=or90zsj3ki3gufnfmvrz
-//spring.datasource.password=pscale_pw_HXtFQJ1hfdsTHD1ACIrd84wstKKV7zb1ciShYg4pjio
+//spring.datasource.url = jdbc:mysql://uw1am7g0urfx1wap:lQVX2Ly7MCUGIW24l4t0@bysotopzno0mfr7kmdps-mysql.services.clever-cloud.com:3306/bysotopzno0mfr7kmdps
+//spring.datasource.username=uw1am7g0urfx1wap
+//spring.datasource.password=lQVX2Ly7MCUGIW24l4t0
 //spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-
-server.port=${PORT:8088}
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:mysql://uw1am7g0urfx1wap:lQVX2Ly7MCUGIW24l4t0@bysotopzno0mfr7kmdps-mysql.services.clever-cloud.com:3306/bysotopzno0mfr7kmdps
-spring.datasource.username=uw1am7g0urfx1wap
-spring.datasource.password=lQVX2Ly7MCUGIW24l4t0
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
